// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/NoResultSearchHint should match snapshot, with data retention 1`] = `
<Fragment>
  <h4
    id="noResultsMessage"
  >
    <FormattedMessage
      defaultMessage="No results found. Try again?"
      id="search_results.noResults"
      values={Object {}}
    />
  </h4>
  <ul>
    <li>
      <FormattedMessage
        defaultMessage="If you're searching a partial phrase (ex. searching \\"rea\\", looking for \\"reach\\" or \\"reaction\\"), append a * to your search term."
        id="search_results.noResults.partialPhraseSuggestion"
        values={Object {}}
      />
    </li>
    <li>
      <FormattedMessage
        defaultMessage="Two letter searches and common words like \\"this\\", \\"a\\" and \\"is\\" won't appear in search results due to the excessive results returned."
        id="search_results.noResults.stopWordsSuggestion"
        values={Object {}}
      />
    </li>
    <DataRetentionHint
      dataRetentionMessageRetentionDays="30"
    />
  </ul>
</Fragment>
`;

exports[`components/NoResultSearchHint should match snapshot, without data retention 1`] = `
<Fragment>
  <h4
    id="noResultsMessage"
  >
    <FormattedMessage
      defaultMessage="No results found. Try again?"
      id="search_results.noResults"
      values={Object {}}
    />
  </h4>
  <ul>
    <li>
      <FormattedMessage
        defaultMessage="If you're searching a partial phrase (ex. searching \\"rea\\", looking for \\"reach\\" or \\"reaction\\"), append a * to your search term."
        id="search_results.noResults.partialPhraseSuggestion"
        values={Object {}}
      />
    </li>
    <li>
      <FormattedMessage
        defaultMessage="Two letter searches and common words like \\"this\\", \\"a\\" and \\"is\\" won't appear in search results due to the excessive results returned."
        id="search_results.noResults.stopWordsSuggestion"
        values={Object {}}
      />
    </li>
  </ul>
</Fragment>
`;
